[package]
name = "brodrust"
version = "0.1.0"
authors = ["Dmitriy Koltsov <dkoltsov@picodata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luajit = { git = "https://github.com/picodata/luajit-rs" }

[lib]
crate-type = ["dylib"]
