[package]
name = "brodrust"
version = "0.1.0"
authors = ["Dmitriy Koltsov <dkoltsov@picodata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luajit = { git = "https://github.com/picodata/luajit-rs" }
libc = "0.2.32"
byteorder = "1.3.4"
error-chain = "0.10"
openssl = "0.10.30"

[lib]
crate-type = ["dylib"]
